Edited some aliases for guilds

--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -23,5 +23,10 @@
     "lang": "en",
     "creator": 474123882056646677,
     "prefix": ";"
+  },
+  "747610340744757298": {
+    "lang": "fr",
+    "creator": 741125296761208942,
+    "prefix": ";"
   }
 }
