Edited permissions for setLang

--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -25,7 +25,7 @@
     "prefix": ";"
   },
   "747610340744757298": {
-    "lang": "fr",
+    "lang": "en",
     "creator": 741125296761208942,
     "prefix": ";"
   }
