xp guild commit

--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -17,7 +17,7 @@
   "741180572147122208": {
     "creator": 741177948144664587,
     "lang": "en",
-    "prefix": ";"
+    "prefix": "_"
   },
   "746281761217970246": {
     "lang": "en",
