--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -23,5 +23,10 @@
     "lang": "en",
     "creator": 474123882056646677,
     "prefix": ";"
+  },
+  "579554493822140429": {
+    "lang": "fr",
+    "creator": 307931607031873547,
+    "prefix": "."
   }
 }
