--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -2,31 +2,37 @@
   "744259771527594054": {
     "creator": 474123882056646677,
     "lang": "fr",
-    "prefix": ";"
+    "prefix": ";",
+    "cmds": {}
   },
   "732653715697434696": {
     "creator": 317018826825007114,
     "lang": "fr",
-    "prefix": ";"
+    "prefix": ";",
+    "cmds": {}
   },
   "708302374053216256": {
     "creator": 409760580728258561,
     "lang": "fr",
-    "prefix": ";"
+    "prefix": ";",
+    "cmds": {}
   },
   "741180572147122208": {
     "creator": 741177948144664587,
     "lang": "en",
-    "prefix": "_"
+    "prefix": "_",
+    "cmds": {}
   },
   "746281761217970246": {
     "lang": "en",
     "creator": 474123882056646677,
-    "prefix": ";"
+    "prefix": ";",
+    "cmds": {}
   },
   "579554493822140429": {
     "lang": "fr",
     "creator": 307931607031873547,
-    "prefix": "."
+    "prefix": ".",
+    "cmds": {}
   }
 }
