if debug -> debug check with custom error implementation

--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -9,7 +9,10 @@
     "creator": 317018826825007114,
     "lang": "fr",
     "prefix": ";",
-    "cmds": {}
+    "cmds": {
+      "scp": "scp",
+      "meteo": "meteo"
+    }
   },
   "708302374053216256": {
     "creator": 409760580728258561,
