Moved the help command to a cog and added the advanced help cmd.

--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -37,5 +37,11 @@
     "creator": 307931607031873547,
     "prefix": ".",
     "cmds": {}
+  },
+  "692853537813823580": {
+    "lang": "fr",
+    "creator": 302479681419083777,
+    "prefix": "?",
+    "cmds": {}
   }
 }
