new version, i guess

--- a/json/serverconfig.json
+++ b/json/serverconfig.json
@@ -43,5 +43,11 @@
     "creator": 302479681419083777,
     "prefix": "?",
     "cmds": {}
+  },
+  "692676317703045200": {
+    "lang": "fr",
+    "creator": 659435436749488150,
+    "prefix": ";",
+    "cmds": {}
   }
 }
